# RPE-Act-Comp

./: .gitignore  AGENTS.md  AGENTS.md.txt  README.md  README.md.txt  environment.yml  project_brief.md  pyproject.toml  requirements.txt  sitecustomize.py
configs/data/: tiny_corpus.yaml  wikitext2_single_head.yaml  wikitext2_single_head_cached.yaml
configs/exp/: all_head_m_topk_diagnosis_layer3.yaml  all_head_m_topk_diagnosis_layer3_stage2.yaml  baseline_demo.yaml  multi_head_replication_distilgpt2_layer3_all_heads_round1.yaml  multi_head_replication_distilgpt2_round1.yaml  multi_head_replication_distilgpt2_round2.yaml  multi_head_replication_distilgpt2_round3_heads014.yaml  multi_head_subset_diagnosis_layer3.yaml  single_head_distilgpt2.yaml
configs/model/: distilgpt2_single_head.yaml  (+1 more)
notes/: all_head_phase_handoff.md  index.md  multi_head_phase_transition.md  multi_head_round1_handoff.md  multi_head_round2_execution_update.md  multi_head_subset_composition_conclusion.md
scripts/: 00_prepare_data.py  01_collect_head_acts.py  02_run_pca_baseline.py  03_run_random_baseline.py  04_run_rpedr_search.py  05_fold_vo_and_save.py  06_eval_model.py  07_greedy_layer_compose.py  08_plot_main_results.py  09_run_multi_head_replication.py  10_eval_recomposed_multi_head_subsets.py  11_run_all_head_m_topk_diagnosis.py  12_run_all_head_m_topk_master_update.py  13_generate_readme_figures.py
tests/: test_full_rank_identity.py  test_hook_shapes.py  test_random_projector_orthogonality.py  test_rpedr_single_head.py  test_shape_correctness.py  test_vo_fold_equivalence.py
(+238 files in other folders)
