[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpedr-llm"
version = "0.1.0"
description = "Minimal RPEDR-style V/O compression prototype for decoder-only language models."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "datasets==4.7.0",
  "numpy==2.4.3",
  "pandas==3.0.1",
  "pypdf==6.8.0",
  "pytest==9.0.2",
  "PyYAML==6.0.3",
  "torch==2.10.0",
  "transformers==5.3.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
